# RDI-AgentBeats-MAS-GraphJudge

./: .editorconfig  .env.example  .gitignore  .gitmessage  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.green  Dockerfile.purple  LICENSE.md  Makefile  README.md  docker-compose-local.yaml  mkdocs.yaml  pyproject.toml  scenario.toml
.claude/: .claude.json  settings.json
.claude/rules/: context-management.md
.claude/scripts/: statusline.sh
.claude/skills/commit-staged-with-message/: SKILL.md
.claude/skills/compacting-context/: SKILL.md
.claude/skills/designing-backend/: SKILL.md
.claude/skills/generating-interactive-userstory-md/: SKIL.md
.claude/skills/generating-prd-json-from-prd-md/: SKILL.md
.claude/skills/generating-prd-md-from-userstory-md/: SKILL.md
.claude/skills/implementing-python/: SKILL.md
.claude/skills/researching-codebase/: SKILL.md
.claude/skills/reviewing-code/: SKILL.md
.claude/skills/testing-python/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: agentbeats-analysis-claude.yaml  agentbeats-analysis-firecrawl.yaml  agentbeats-analysis-mino.yaml  agentbeats-run-scenario.yml
.github/workflows/claude/: README.md  call_claude.py
.github/workflows/firecrawl/: README.md  call_firecrawl.py  prompt.txt  schema.json
.github/workflows/mino/: README.md  call_mino.py  call_mino_sync.py  prompt.txt
_archive/: .dockerignore  CHANGELOG.md  Dockerfile
_archive/agentbeats/: __init__.py  agent.py  executor.py  messenger.py  server.py
_archive/agentbeats/evals/: __init__.py  graph.py  latency.py  llm_judge.py  text_metrics.py
_archive/docs/: DOMAIN_FOCUS.md  IMPLEMENTATION_CHECKLIST.md
_archive/docs/AgentBeats/: A2A-Extension-Integration.md  AgentBeats-Benchmark-Design-Principles.md  AgentBeats-Research.md  Green-Agent-Metrics-Specification.md  Local-Testing-and-Deployment.md  Technical-Implementation-Guide.md
_archive/examples/purple-agent/: Dockerfile  README.md  pyproject.toml
_archive/examples/purple-agent/src/purpleagent/: __init__.py  server.py
_archive/tests/: test_agent.py  test_docker.py  test_executor.py  test_graph.py  test_latency.py  test_llm_judge.py  test_messenger.py  test_purple_agent.py  test_server.py  test_text_metrics.py
data/: ground_truth.json
docs/: ABSTRACT.md  DOMAIN_FOCUS.md  GAP_ANALYSIS.md  GreenAgent-PRD.md  GreenAgent-UserStory.concise.md  GreenAgent-UserStory.md  PRD.md  PurpleAgent-PRD.md  PurpleAgent-UserStory.md  QUICKSTART.md  README.md  RESOURCES.md  TODO.md  UserStory.md  demo-video-script.md
docs/AgentBeats/: AGENTBEATS_REGISTRATION.md  COMPETITION-ALIGNMENT.md  CONFIGURATION.md  CompetitionAnalysis.md  DEMO_VIDEO_SCRIPT.md  LIMITATIONS.md  Local-Testing-and-Deployment.md  MULTI_AGENT_TRACING.md  QUICKSTART.md  RESOURCES.md  SUBMISSION-GUIDE.md  leaderboard_queries.json  output_schema.md  sample_scenario.toml  scenario.toml
docs/AgentBeats/Competition_Analysis/: CompetitionAnalysis-Claude.json  CompetitionAnalysis-Firecrawl.json
docs/arch_vis/: AgenticBenchArch.puml  ComponentDiagram.puml  EvaluationFlow.puml  TracingArchitecture.puml
docs/best-practices/: bdd-best-practices.md  python-best-practices.md  tdd-best-practices.md  testing-strategy.md
docs/ralph_docs/: prd.json  progress.txt
docs/research/: trace-collection-strategy.md
docs/sprints/: GreenAgent-Sprint2-PRD-Ralph.md  PurpleAgent-Sprint1-PRD-Ralph.md
output/: .gitkeep  results.json  results_full.json
ralph/: README.md  TEMPLATE_USAGE.md
ralph/docs/: LEARNINGS.md  prd.json  progress.txt
ralph/scripts/: generate_prd_json.py
results/: .gitkeep
scripts/docker/: build.sh  e2e_test.sh  push.sh
scripts/leaderboard/: generate_compose.py  record_provenance.py
src/common/: __init__.py  llm_client.py  messenger.py  models.py  peer_discovery.py  settings.py  trace_reporter.py
src/green/: __init__.py  agent.py  executor.py  messenger.py  models.py  server.py  settings.py  trace_store.py
src/green/evals/: __init__.py  base.py  graph.py  llm_judge.py  system.py
src/purple/: __init__.py  agent.py  executor.py  messenger.py  models.py  server.py  settings.py
submissions/: .gitkeep
tests/: test_common_llm.py  test_common_messenger.py  test_common_models.py  test_common_peer_discovery.py  test_common_trace_reporter.py  test_demo_script.py  test_executor.py  test_executor_pipeline.py  test_extensibility_docs.py  test_graph.py  test_green_agent_orchestration.py  test_green_evals_base.py  test_green_executor_pipeline.py  test_green_executor_traces.py  test_green_graph.py  test_green_llm_config.py  test_green_llm_integration.py  test_green_llm_live.py  test_green_llm_prompt.py  test_green_messenger_a2a.py  test_green_models.py  test_green_models_interaction.py  test_green_models_schema.py  test_green_server_endpoints.py  test_green_server_integration.py  test_green_server_settings.py  test_green_server_traces.py  test_green_settings.py  test_green_system_latency.py  test_green_trace_store.py  test_llm_config.py  test_llm_integration.py  test_llm_prompt.py  test_messenger.py  test_messenger_behavior.py  test_models.py  test_openai_dependency.py  test_purple_agent.py  test_purple_agent_agentcard.py  test_purple_models.py  (+8 more)
tests/e2e/: __init__.py  test_agentcard_endpoints.py  test_green_agentcard_endpoints.py  test_green_groundtruth_validation.py  test_ground_truth_validation.py  test_integration.py  test_live_a2a_evaluation.py  test_purple_agent_outputs.py  test_system_integration_e2e.py
